--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
 <body>
 
   <header>
-    <h1>Roulette Armory</h1>
+    <h1>BadUSB Roulette</h1>
+    <h4>FOR THE DIGISPARK ATTINY85</h4>
     <div class="subtitle">/// UNIFIED PAYLOAD FABRICATION SYSTEM ///</div>
   </header>
 
