--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BadUSB ROULETTE </title>
+  <title>ROULETTE ARMORY // AUTHORIZED PERSONNEL ONLY</title>
   <script src="https://cdn.jsdelivr.net/gh/skandhurkat/micronucleus-web@master/lib/micronucleus.js"></script>
   <style>
     :root {
@@ -274,8 +274,7 @@
 <body>
 
   <header>
-    <h1>BadUSB Roulette</h1>
-    <h2>FOR THE DIGISPARK ATTINY85</h2>
+    <h1>Roulette Armory</h1>
     <div class="subtitle">/// UNIFIED PAYLOAD FABRICATION SYSTEM ///</div>
   </header>
 
@@ -296,10 +295,10 @@
         <div class="manual-column">
           <h3>OPERATIONAL PROTOCOL</h3>
           <ul>
-            <li><strong>LOAD:</strong> Drag .txt or .ino files into the chambers below.</li>
+            <li><strong>LOAD:</strong> Drag .txt or .ino files into the chambers.</li>
+            <li><strong>SKIP LOGIC:</strong> Empty chambers are automatically skipped during cycling.</li>
             <li><strong>COMPILE:</strong> Click the [FLASH FIRMWARE] button.</li>
-            <li><strong>ARM:</strong> When prompted, plug in your Digispark.</li>
-            <li><strong>NOTE:</strong> Total payload size must not exceed 1024 bytes.</li>
+            <li><strong>LIMITS:</strong> Total payload size must not exceed 1024 bytes.</li>
           </ul>
         </div>
       </div>
@@ -317,29 +316,29 @@
   <div class="chamber-grid">
     <div class="chamber" id="box1">
       <div class="chamber-header">
-        <span>CHAMBER 01 // WINDOWS</span>
+        <span>CHAMBER 01</span>
         <span class="load-btn" onclick="triggerFile('file1')">[LOAD FILE]</span>
         <input type="file" id="file1" hidden onchange="loadFile(this, 'c1')">
       </div>
-      <textarea id="c1" placeholder="// DRAG FILE HERE OR TYPE CODE&#10;&#10;DELAY 1000&#10;GUI r&#10;DELAY 200&#10;STRING notepad&#10;ENTER"></textarea>
+      <textarea id="c1" placeholder="// EXAMPLE: WINDOWS PAYLOAD&#10;&#10;DELAY 1000&#10;GUI r&#10;DELAY 200&#10;STRING notepad&#10;ENTER"></textarea>
     </div>
 
     <div class="chamber" id="box2">
       <div class="chamber-header">
-        <span>CHAMBER 02 // MAC</span>
+        <span>CHAMBER 02</span>
         <span class="load-btn" onclick="triggerFile('file2')">[LOAD FILE]</span>
         <input type="file" id="file2" hidden onchange="loadFile(this, 'c2')">
       </div>
-      <textarea id="c2" placeholder="// DRAG FILE HERE OR TYPE CODE&#10;&#10;DELAY 1000&#10;GUI SPACE&#10;DELAY 200&#10;STRING Terminal&#10;ENTER"></textarea>
+      <textarea id="c2" placeholder="// EXAMPLE: MAC PAYLOAD&#10;&#10;DELAY 1000&#10;GUI SPACE&#10;DELAY 200&#10;STRING Terminal&#10;ENTER"></textarea>
     </div>
 
     <div class="chamber" id="box3">
       <div class="chamber-header">
-        <span>CHAMBER 03 // LINUX</span>
+        <span>CHAMBER 03</span>
         <span class="load-btn" onclick="triggerFile('file3')">[LOAD FILE]</span>
         <input type="file" id="file3" hidden onchange="loadFile(this, 'c3')">
       </div>
-      <textarea id="c3" placeholder="// DRAG FILE HERE OR TYPE CODE&#10;&#10;DELAY 1000&#10;GUI&#10;DELAY 200&#10;STRING firefox&#10;ENTER"></textarea>
+      <textarea id="c3" placeholder="// EXAMPLE: LINUX PAYLOAD&#10;&#10;DELAY 1000&#10;GUI&#10;DELAY 200&#10;STRING firefox&#10;ENTER"></textarea>
     </div>
   </div>
 
@@ -486,22 +485,29 @@ function patchHex(hexString, payloadData) {
   const totalSize = 10 + payloadData.c1.length + payloadData.c2.length + payloadData.c3.length;
   if (totalSize > 1024) throw new Error("PAYLOAD OVERFLOW: " + totalSize + "/1024 BYTES");
 
-  // Inject C1
-  buffer[magicIdx + 4] = (currentOffset >> 8) & 0xFF;
-  buffer[magicIdx + 5] = (currentOffset) & 0xFF;
-  for(let b of payloadData.c1) buffer[magicIdx + dataStart++] = b;
-  currentOffset += payloadData.c1.length;
-  
-  // Inject C2
-  buffer[magicIdx + 6] = (currentOffset >> 8) & 0xFF;
-  buffer[magicIdx + 7] = (currentOffset) & 0xFF;
-  for(let b of payloadData.c2) buffer[magicIdx + dataStart++] = b;
-  currentOffset += payloadData.c2.length;
-  
-  // Inject C3
-  buffer[magicIdx + 8] = (currentOffset >> 8) & 0xFF;
-  buffer[magicIdx + 9] = (currentOffset) & 0xFF;
-  for(let b of payloadData.c3) buffer[magicIdx + dataStart++] = b;
+  // Helper: Write payload or skip if empty
+  function inject(payload, offH_idx, offL_idx) {
+    // If payload is basically empty (just OP_END 0x00) and no real commands, 
+    // treat as NULL. 
+    // compileDucky returns [0x00] for empty string.
+    if (payload.length <= 1 && payload[0] === 0x00) {
+      buffer[magicIdx + offH_idx] = 0x00;
+      buffer[magicIdx + offL_idx] = 0x00;
+      return; 
+    }
+    
+    // Write Offset
+    buffer[magicIdx + offH_idx] = (currentOffset >> 8) & 0xFF;
+    buffer[magicIdx + offL_idx] = (currentOffset) & 0xFF;
+    
+    // Write Data
+    for(let b of payload) buffer[magicIdx + dataStart++] = b;
+    currentOffset += payload.length;
+  }
+
+  inject(payloadData.c1, 4, 5);
+  inject(payloadData.c2, 6, 7);
+  inject(payloadData.c3, 8, 9);
   
   return buffer;
 }
