--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ROULETTE ARMORY // AUTHORIZED PERSONNEL ONLY</title>
+  <title>BADUSB ROULETTE</title>
   <script src="https://cdn.jsdelivr.net/gh/skandhurkat/micronucleus-web@master/lib/micronucleus.js"></script>
   <style>
     :root {
@@ -274,7 +274,8 @@
 <body>
 
   <header>
-    <h1>Roulette Armory</h1>
+    <h1>BadUSB Roulette</h1>
+    <h2>For the Digispark ATTINY85</h2>
     <div class="subtitle">/// UNIFIED PAYLOAD FABRICATION SYSTEM ///</div>
   </header>
 
