--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BADUSB ROULETTE</title>
+  <title>BADUSB ROULETTE [UNIFIED]</title>
   <script src="https://cdn.jsdelivr.net/gh/skandhurkat/micronucleus-web@master/lib/micronucleus.js"></script>
   <style>
     :root {
@@ -14,6 +14,7 @@
       --border-color: #333;
     }
 
+    /* --- BASE LAYOUT --- */
     body {
       background-color: var(--bg-color);
       color: var(--term-green);
@@ -27,6 +28,7 @@
       overflow-x: hidden;
     }
 
+    /* --- HEADER --- */
     header {
       width: 100%;
       padding: 20px 0;
@@ -42,86 +44,143 @@
       text-transform: uppercase;
     }
 
-    .subtitle { font-size: 0.8rem; color: var(--term-dim); margin-top: 5px; }
+    .subtitle {
+      font-size: 0.8rem;
+      color: var(--term-dim);
+      margin-top: 5px;
+    }
 
+    /* --- WINDOWS ALERT --- */
     #winWarning {
       display: none;
-      width: 95%; max-width: 800px;
+      width: 95%;
+      max-width: 800px;
       border: 1px solid var(--alert-red);
       background: rgba(50, 0, 0, 0.5);
       margin-bottom: 20px;
-      padding: 10px; font-size: 0.8rem; color: var(--alert-red);
+      text-align: left;
+      color: var(--alert-red);
+      padding: 10px;
+      font-size: 0.8rem;
     }
     #winWarning a { color: #fff; text-decoration: underline; }
 
+    /* --- ARMORY --- */
     .armory-controls {
-      display: flex; gap: 20px; margin-bottom: 20px;
-      align-items: center; flex-wrap: wrap; justify-content: center;
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
       font-size: 0.9rem;
     }
 
-    select, .file-upload {
-      background: #000; color: var(--term-green);
-      border: 1px solid #333; padding: 8px;
-      font-family: inherit; cursor: pointer;
+    select {
+      background: #000;
+      color: var(--term-green);
+      border: 1px solid #333;
+      padding: 8px;
+      font-family: inherit;
+      cursor: pointer;
     }
-    .file-upload { color: #888; border-style: dashed; }
+
+    .file-upload {
+      border: 1px solid #333;
+      padding: 8px;
+      cursor: pointer;
+      color: #888;
+    }
     .file-upload:hover { border-color: var(--term-green); color: var(--term-green); }
     input[type="file"] { display: none; }
 
+    /* --- CHAMBERS --- */
     .chamber-grid {
-      display: flex; gap: 15px; width: 95%; max-width: 1600px;
-      flex: 1; margin-bottom: 30px;
+      display: flex;
+      gap: 15px;
+      width: 95%;
+      max-width: 1600px;
+      flex: 1;
+      margin-bottom: 30px;
     }
 
     .chamber {
-      flex: 1; background: var(--panel-bg);
+      flex: 1;
+      background: var(--panel-bg);
       border: 1px solid var(--border-color);
-      display: flex; flex-direction: column;
+      display: flex;
+      flex-direction: column;
     }
 
     .chamber-header {
-      background: #111; border-bottom: 1px solid #333;
-      padding: 8px; display: flex;
-      justify-content: space-between; align-items: center;
+      background: #111;
+      border-bottom: 1px solid #333;
+      padding: 8px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       font-size: 0.8rem;
     }
     
     .mutation-select {
-        background: #000; color: #666;
-        border: 1px solid #333; font-size: 0.7rem;
+        background: #000;
+        color: #666;
+        border: 1px solid #333;
+        font-size: 0.7rem;
     }
 
     textarea {
-      flex: 1; background: #000; color: #ccc;
-      border: none; padding: 10px; resize: none;
-      font-family: 'Consolas', monospace; font-size: 13px;
-      line-height: 1.4; outline: none; min-height: 300px;
+      flex: 1;
+      background: #000;
+      color: #ccc;
+      border: none;
+      padding: 10px;
+      resize: none;
+      font-family: 'Consolas', monospace;
+      font-size: 13px;
+      line-height: 1.4;
+      outline: none;
+      min-height: 300px;
     }
 
+    /* --- TRIGGER --- */
     .trigger-zone { width: 100%; text-align: center; padding-bottom: 20px; }
     
     button#burnBtn {
-      background: #000; color: var(--term-green);
-      border: 2px solid var(--term-green); padding: 15px 40px;
-      font-size: 1.2rem; letter-spacing: 2px;
-      cursor: pointer; text-transform: uppercase;
+      background: #000;
+      color: var(--term-green);
+      border: 2px solid var(--term-green);
+      padding: 15px 40px;
+      font-size: 1.2rem;
+      letter-spacing: 2px;
+      cursor: pointer;
+      text-transform: uppercase;
     }
     button#burnBtn:hover { background: var(--term-green); color: #000; }
 
+    /* --- CONSOLE --- */
     .console-wrapper {
-      width: 95%; max-width: 1600px;
-      background: #000; border: 1px solid #333;
+      width: 95%;
+      max-width: 1600px;
+      background: #000;
+      border: 1px solid #333;
       margin-bottom: 40px;
     }
     .console-header {
-      background: #111; border-bottom: 1px solid #333;
-      padding: 5px 10px; font-size: 0.75rem; color: #666;
+      background: #111;
+      border-bottom: 1px solid #333;
+      padding: 5px 10px;
+      font-size: 0.75rem;
+      color: #666;
     }
     #log {
-      height: 300px; overflow-y: scroll; padding: 10px;
-      font-family: 'Consolas', monospace; font-size: 0.85rem;
-      color: #aaa; white-space: pre-wrap;
+      height: 300px;
+      overflow-y: scroll;
+      padding: 10px;
+      font-family: 'Consolas', monospace;
+      font-size: 0.85rem;
+      color: #aaa;
+      white-space: pre-wrap;
     }
     .log-line { border-bottom: 1px solid #111; padding: 2px 0; }
     .log-err { color: var(--alert-red); }
@@ -203,6 +262,7 @@
   </div>
 
 <script>
+// --- UTILS ---
 if (navigator.userAgent.indexOf("Win") != -1) {
   document.getElementById('winWarning').style.display = 'block';
 }
